Added Gossiping protocol extension
This extension maintains of partial view of the p2p network that can be used
to spead information across the network.

- `gossip.js` is the entry point of the extension
- `gossipAlgo.js` is the base class that can be used to add new protocols
- `gossipRPS.js` is the implementation of the Random Peer Sampling algorithm
- `gossipWorker.js` allows the algorithm to be run in an other thread

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "./scripts/build.sh",
     "clean": "./scripts/clean.sh",
-    "debug": "mkdir dist 2>/dev/null;watchify src/index.js --standalone paradone -d -o dist/paradone.js -v",
+    "debug": "./scripts/debug.sh",
     "doc": "./scripts/doc.sh",
     "help": "./scripts/help.sh",
     "start": "./scripts/help.sh",
@@ -40,7 +40,8 @@
     "karma-notify-reporter": "0.1.X",
     "karma-sinon": "1.X.X",
     "uglify-js": "2.X.X",
-    "watchify": "3.X.X"
+    "watchify": "3.X.X",
+    "workerify": "git://github.com/josephros/workerify.git"
   },
   "browserify": {
     "transform": [
