Support for ES6
- Changed import/export to ES6 modules
- Modified documentation generation to support ES6 modules
- Replaced some function bindings with the fat arrow equivalent
- Added ES5 friendly build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Paradone",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Peer-to-peer assisted media diffusion in the browser with WebRTC and MediaSource",
   "author": "GaspardP",
   "license": "AGPLv3",
@@ -10,23 +10,27 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "build": "mkdir dist 2>/dev/null;browserify src/index.js | uglifyjs -cm --screw-ie8 --preamble \"$(cat ./license.preamble.js)\" -o ./dist/paradone.min.js",
-    "clean": "find . -type f -name \"#*#\" -o -name \"*~\" -delete; rm -rf ./dist ./doc",
-    "debug": "mkdir dist 2>/dev/null;watchify src/index.js -d -o dist/paradone.js -v",
-    "doc": "jsdoc -P ./package.json -d ./doc -r ./src",
-    "help": "echo \"usage: npm run <command>\n\n  build   Concatenate and minify the script\n  clean   Remove temporary files and generated builds and doc\n  debug   Auto-build on save with source-map support\n  doc     Generate the documentation of the project in ./doc\n  help    Display usage\n  test    Run the tests on the source files\n  watch   Run tests on every file change\n\"",
-    "start": "npm run help",
+    "build": "./scripts/build.sh",
+    "clean": "./scripts/clean.sh",
+    "debug": "mkdir dist 2>/dev/null;watchify src/index.js --standalone paradone -d -o dist/paradone.js -v",
+    "doc": "./scripts/doc.sh",
+    "help": "./scripts/help.sh",
+    "start": "./scripts/help.sh",
     "test": "./node_modules/karma/bin/karma start karma.conf.js",
     "watch": "./node_modules/karma/bin/karma start karma.conf.js --port 9877 --autoWatch --singleRun false"
   },
   "dependencies": {
-    "localforage": "1.2.X"
+    "localforage": "1.2.X",
+    "ramda": "0.13.X"
   },
   "devDependencies": {
-    "browserify": "9.X.X",
+    "babel": "5.1.X",
+    "babelify": "6.0.X",
+    "browserify": "9.0.X",
+    "esperanto": "0.6.X",
     "jsdoc": "^3.3.0-beta3",
     "karma": "0.12.X",
-    "karma-browserify": "4.X.X",
+    "karma-browserify": "4.1.X",
     "karma-chai": "0.1.X",
     "karma-chrome-launcher": "0.1.X",
     "karma-coverage": "0.2.X",
@@ -37,5 +41,10 @@
     "karma-sinon": "1.X.X",
     "uglify-js": "2.X.X",
     "watchify": "3.X.X"
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
+    ]
   }
 }
