--- a/.jshintrc
+++ b/.jshintrc
@@ -41,7 +41,7 @@
     "eqnull"        : false,     // true: Tolerate use of `== null`
     "es5"           : false,     // true: Allow ES5 syntax (ex: getters and setters)
     "esnext"        : true,     // true: Allow ES.next (ES6) syntax (ex: `const`)
-    "moz"           : true,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
+    "moz"           : false,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
                                  // (ex: `for each`, multiple try/catch, function expression…)
     "evil"          : false,     // true: Tolerate use of `eval` and `new Function()`
     "expr"          : false,     // true: Tolerate `ExpressionStatement` as Programs
@@ -50,7 +50,7 @@
     "iterator"      : false,     // true: Tolerate using the `__iterator__` property
     "lastsemic"     : false,     // true: Tolerate omitting a semicolon for the last statement of a 1-line block
     "laxbreak"      : false,     // true: Tolerate possibly unsafe line breakings
-    "laxcomma"      : true,     // true: Tolerate comma-first style coding
+    "laxcomma"      : false,     // true: Tolerate comma-first style coding
     "loopfunc"      : false,     // true: Tolerate functions being defined in loops
     "multistr"      : false,     // true: Tolerate multi-line strings
     "noyield"       : false,     // true: Tolerate generator functions with no yield statement in them.
